--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/VictoryPose/Overwatch/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/VictoryPose/Overwatch/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <div id="container">
-        <h1>/Hero's/Illari/</h1>
+        <h1>/Illari/VictoryPose/</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -39,16 +39,28 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./Voicelines/' class='name'>Voicelines</a></td>
-                    <td><a href='./Voicelines/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2'><a href='./Voicelines/'>N/A</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./Voicelines/'>Aug 27 2023 1:43 PM</a></td>
+                    <td><a href='./Basking/' class='name'>Basking</a></td>
+                    <td><a href='./Basking/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2'><a href='./Basking/'>N/A</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Basking/'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./VictoryPose/' class='name'>VictoryPose</a></td>
-                    <td><a href='./VictoryPose/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2'><a href='./VictoryPose/'>N/A</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./VictoryPose/'>Aug 27 2023 1:43 PM</a></td>
+                    <td><a href='./Heroic/' class='name'>Heroic</a></td>
+                    <td><a href='./Heroic/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2'><a href='./Heroic/'>N/A</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Heroic/'>Aug 27 2023 1:43 PM</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./Over the Shoulder/' class='name'>Over the Shoulder</a></td>
+                    <td><a href='./Over the Shoulder/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2'><a href='./Over the Shoulder/'>N/A</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Over the Shoulder/'>Aug 27 2023 1:43 PM</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./Stare Down/' class='name'>Stare Down</a></td>
+                    <td><a href='./Stare Down/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2'><a href='./Stare Down/'>N/A</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Stare Down/'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
             </tbody>
         </table>
