--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/VictoryPose/Overwatch/Basking/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/VictoryPose/Overwatch/Basking/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <div id="container">
-        <h1>/Hero's/Illari/</h1>
+        <h1>/Overwatch/Basking/</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -39,16 +39,10 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./Voicelines/' class='name'>Voicelines</a></td>
-                    <td><a href='./Voicelines/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2'><a href='./Voicelines/'>N/A</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./Voicelines/'>Aug 27 2023 1:43 PM</a></td>
-                </tr>
-                <tr class='directory'>
-                    <td><a href='./VictoryPose/' class='name'>VictoryPose</a></td>
-                    <td><a href='./VictoryPose/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2'><a href='./VictoryPose/'>N/A</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./VictoryPose/'>Aug 27 2023 1:43 PM</a></td>
+                    <td><a href='./Animations/' class='name'>Animations</a></td>
+                    <td><a href='./Animations/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2'><a href='./Animations/'>N/A</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Animations/'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
             </tbody>
         </table>
