--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/VictoryPose/Overwatch/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/VictoryPose/Overwatch/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <div id="container">
-        <h1>/Illari/VictoryPose/</h1>
+        <h1>/VictoryPose/Overwatch/</h1>
         <table class="sortable">
             <thead>
                 <tr>
