--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/VictoryPose/Overwatch/Over the Shoulder/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/VictoryPose/Overwatch/Over the Shoulder/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <div id="container">
-        <h1>/Basking/Animations/</h1>
+        <h1>/Overwatch/Over the Shoulder/</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -39,16 +39,10 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./00000000DC0B.owanimclip' class='name'>00000000DC0B.owanimclip</a></td>
-                    <td><a href='./00000000DC0B.owanimclip'>owanimclip file</a></td>
-                    <td sorttable_customkey='2'><a href='./00000000DC0B.owanimclip'>70 KB</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./00000000DC0B.owanimclip'>Aug 27 2023 1:43 PM</a></td>
-                </tr>
-                <tr class='directory'>
-                    <td><a href='./00000000DFC1.owanimclip' class='name'>00000000DFC1.owanimclip</a></td>
-                    <td><a href='./00000000DFC1.owanimclip'>owanimclip file</a></td>
-                    <td sorttable_customkey='2'><a href='./00000000DFC1.owanimclip'>68 KB</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./00000000DFC1.owanimclip'>Aug 27 2023 1:43 PM</a></td>
+                    <td><a href='./Animations/' class='name'>Animations</a></td>
+                    <td><a href='./Animations/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2'><a href='./Animations/'>N/A</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Animations/'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
             </tbody>
         </table>
