--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/index.html
@@ -50,6 +50,12 @@
                     <td sorttable_customkey='2'><a href='./VictoryPose/'>N/A</a></td>
                     <td sorttable_customkey='1693136628'><a href='./VictoryPose/'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
+                <tr class='directory'>
+                    <td><a href='./Spray/' class='name'>Spray</a></td>
+                    <td><a href='./Spray/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2'><a href='./Spray/'>N/A</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Spray/'>Aug 27 2023 1:43 PM</a></td>
+                </tr>
             </tbody>
         </table>
     </div>
