--- a/cdn/Overwatch/v2.6.0.1/Hero's/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/index.html
@@ -44,6 +44,12 @@
                     <td sorttable_customkey='2'><a href='./Illari/'>N/A</a></td>
                     <td sorttable_customkey='1693136628'><a href='./Illari/'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
+                <tr class='directory'>
+                    <td><a href='./Doomfist/' class='name'>Doomfist</a></td>
+                    <td><a href='./Doomfist/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2'><a href='./Doomfist/'>N/A</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Doomfist/'>Aug 27 2023 1:43 PM</a></td>
+                </tr>
             </tbody>
         </table>
     </div>
