--- a/cdn/Overwatch/v2.6.0.1/Hero's/Doomfist/Voicelines/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Doomfist/Voicelines/index.html
@@ -57,7 +57,7 @@
                     <td sorttable_customkey='1693136628'><a href='./BehindYou/'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./Bye/' class='name'>BehindYou</a></td>
+                    <td><a href='./Bye/' class='name'>Bye</a></td>
                     <td><a href='./Bye/'>&lt;Directory&gt;</a></td>
                     <td sorttable_customkey='2'><a href='./Bye/'>N/A</a></td>
                     <td sorttable_customkey='1693136628'><a href='./Bye/'>Aug 27 2023 1:43 PM</a></td>
