--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Spray/Achievements/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Spray/Achievements/index.html
@@ -39,10 +39,10 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./Cute.tif' class='name'>Cute.tif</a></td>
-                    <td><a href='./Cute.tif'>.TIF file</a></td>
-                    <td sorttable_customkey='155'><a href='./Cute.tif'>155 KB</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./Cute.tif'>Aug 27 2023 1:43 PM</a></td>
+                    <td><a href='./Cute.tiff' class='name'>Cute.tiff</a></td>
+                    <td><a href='./Cute.tiff'>.TIFF file</a></td>
+                    <td sorttable_customkey='155'><a href='./Cute.tiff'>155 KB</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Cute.tiff'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./Pixel.tif' class='name'>Pixel.tif</a></td>
