--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Spray/Achievements/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Spray/Achievements/index.html
@@ -50,7 +50,18 @@
                     <td sorttable_customkey='67'><a href='./Pixel.tif'>67 KB</a></td>
                     <td sorttable_customkey='1693136628'><a href='./Pixel.tif'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
-
+                <tr class='directory'>
+                    <td><a href='./Cute.webp' class='name'>Cute.webp</a></td>
+                    <td><a href='./Cute.webp'>.WEBP file</a></td>
+                    <td sorttable_customkey='155'><a href='./Cute.webp'>155 KB</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Cute.webp'>Aug 27 2023 1:43 PM</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./Pixel.webp' class='name'>Pixel.webp</a></td>
+                    <td><a href='./Pixel.webp'>.WEBP file</a></td>
+                    <td sorttable_customkey='67'><a href='./Pixel.webp'>67 KB</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Pixel.webp'>Aug 27 2023 1:43 PM</a></td>
+                </tr>
             </tbody>
         </table>
     </div>
