--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Spray/Overwatch/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Spray/Overwatch/index.html
@@ -39,58 +39,58 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./Braiding.tif' class='name'>Braiding.tif</a></td>
-                    <td><a href='./Braiding.tif'>.TIF file</a></td>
-                    <td sorttable_customkey='149'><a href='./Braiding.tif'>149 KB</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./Braiding.tif'>Aug 27 2023 1:43 PM</a></td>
+                    <td><a href='./Braiding.webp' class='name'>Braiding.webp</a></td>
+                    <td><a href='./Braiding.webp'>.WEBP file</a></td>
+                    <td sorttable_customkey='29'><a href='./Braiding.webp'>29 KB</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Braiding.webp'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./Burning Regret.tif' class='name'>Burning Regret.tif</a></td>
-                    <td><a href='./Burning Regret.tif'>.TIF file</a></td>
-                    <td sorttable_customkey='198'><a href='./Burning Regret.tif'>198 KB</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./Burning Regret.tif'>Aug 27 2023 1:43 PM</a></td>
+                    <td><a href='./Burning Regret.webp' class='name'>Burning Regret.webp</a></td>
+                    <td><a href='./Burning Regret.webp'>.WEBP file</a></td>
+                    <td sorttable_customkey='42'><a href='./Burning Regret.webp'>42 KB</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Burning Regret.webp'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./Disappointed Chuño.tif' class='name'>Disappointed Chuño.tif</a></td>
-                    <td><a href='./Disappointed Chuño.tif'>.TIF file</a></td>
-                    <td sorttable_customkey='91'><a href='./Disappointed Chuño.tif'>91 KB</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./Disappointed Chuño.tif'>Aug 27 2023 1:43 PM</a></td>
+                    <td><a href='./Disappointed Chuño.webp' class='name'>Disappointed Chuño.webp</a></td>
+                    <td><a href='./Disappointed Chuño.webp'>.WEBP file</a></td>
+                    <td sorttable_customkey='17'><a href='./Disappointed Chuño.webp'>17 KB</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Disappointed Chuño.webp'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./Face the Sunrise.tif' class='name'>Face the Sunrise.tif</a></td>
-                    <td><a href='./Face the Sunrise.tif'>.TIF file</a></td>
-                    <td sorttable_customkey='146'><a href='./Face the Sunrise.tif'>146 KB</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./Face the Sunrise.tif'>Aug 27 2023 1:43 PM</a></td>
+                    <td><a href='./Face the Sunrise.webp' class='name'>Face the Sunrise.webp</a></td>
+                    <td><a href='./Face the Sunrise.webp'>.WEBP file</a></td>
+                    <td sorttable_customkey='30'><a href='./Face the Sunrise.webp'>30 KB</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Face the Sunrise.webp'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./Geoglyph.tif' class='name'>Geoglyph.tif</a></td>
-                    <td><a href='./Geoglyph.tif'>.TIF file</a></td>
-                    <td sorttable_customkey='189'><a href='./Geoglyph.tif'>189 KB</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./Geoglyph.tif'>Aug 27 2023 1:43 PM</a></td>
+                    <td><a href='./Geoglyph.webp' class='name'>Geoglyph.webp</a></td>
+                    <td><a href='./Geoglyph.webp'>.WEBP file</a></td>
+                    <td sorttable_customkey='58'><a href='./Geoglyph.webp'>58 KB</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Geoglyph.webp'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./Icon.tif' class='name'>Icon.tif</a></td>
-                    <td><a href='./Icon.tif'>.TIF file</a></td>
-                    <td sorttable_customkey='106'><a href='./Icon.tif'>106 KB</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./Icon.tif'>Aug 27 2023 1:43 PM</a></td>
+                    <td><a href='./Icon.webp' class='name'>Icon.webp</a></td>
+                    <td><a href='./Icon.webp'>.WEBP file</a></td>
+                    <td sorttable_customkey='18'><a href='./Icon.webp'>18 KB</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Icon.webp'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./Llama Love.tif' class='name'>Llama Love.tif</a></td>
-                    <td><a href='./Llama Love.tif'>.TIF file</a></td>
-                    <td sorttable_customkey='217'><a href='./Llama Love.tif'>217 KB</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./Llama Love.tif'>Aug 27 2023 1:43 PM</a></td>
+                    <td><a href='./Llama Love.webp' class='name'>Llama Love.webp</a></td>
+                    <td><a href='./Llama Love.webp'>.WEBP file</a></td>
+                    <td sorttable_customkey='41'><a href='./Llama Love.webp'>41 KB</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Llama Love.webp'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./Pan Flute.tif' class='name'>Pan Flute.tif</a></td>
-                    <td><a href='./Pan Flute.tif'>.TIF file</a></td>
-                    <td sorttable_customkey='117'><a href='./Pan Flute.tif'>117 KB</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./Pan Flute.tif'>Aug 27 2023 1:43 PM</a></td>
+                    <td><a href='./Pan Flute.webp' class='name'>Pan Flute.webp</a></td>
+                    <td><a href='./Pan Flute.webp'>.WEBP file</a></td>
+                    <td sorttable_customkey='26'><a href='./Pan Flute.webp'>26 KB</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Pan Flute.webp'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./Solar Charge.tif' class='name'>Solar Charge.tif</a></td>
-                    <td><a href='./Solar Charge.tif'>.TIF file</a></td>
-                    <td sorttable_customkey='164'><a href='./Solar Charge.tif'>164 KB</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./Solar Charge.tif'>Aug 27 2023 1:43 PM</a></td>
+                    <td><a href='./Solar Charge.webp' class='name'>Solar Charge.webp</a></td>
+                    <td><a href='./Solar Charge.webp'>.WEBP file</a></td>
+                    <td sorttable_customkey='42'><a href='./Solar Charge.webp'>42 KB</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Solar Charge.webp'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
 
             </tbody>
