--- a/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Spray/Season 6/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Illari/Spray/Season 6/index.html
@@ -39,10 +39,10 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./Llama Pajamas.tif' class='name'>Llama Pajamas.tif</a></td>
-                    <td><a href='./Llama Pajamas.tif'>.TIF file</a></td>
-                    <td sorttable_customkey='103'><a href='./Llama Pajamas.tif'>103 KB</a></td>
-                    <td sorttable_customkey='1693136628'><a href='./Llama Pajamas.tif'>Aug 27 2023 1:43 PM</a></td>
+                    <td><a href='./Llama Pajamas.webp' class='name'>Llama Pajamas.webp</a></td>
+                    <td><a href='./Llama Pajamas.webp'>.WEBP file</a></td>
+                    <td sorttable_customkey='21'><a href='./Llama Pajamas.webp'>21 KB</a></td>
+                    <td sorttable_customkey='1693136628'><a href='./Llama Pajamas.webp'>Aug 27 2023 1:43 PM</a></td>
                 </tr>
             </tbody>
         </table>
