--- a/cdn/Overwatch/v2.6.0.1/Hero's/Doomfist/Voicelines/GroupUp/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Doomfist/Voicelines/GroupUp/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="container">
-        <h1>/Voicelines/GoingIn/</h1>
+        <h1>/Voicelines/GroupUp/</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -31,12 +31,30 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./I%27m going in.ogg' class='name'>I'm going in.ogg</a></td>
-                    <td><a href='./I%27m going in.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='10'><a href='./I%27m going in.ogg'>10 KB</a></td>
-                    <td sorttable_customkey='1693139238'><a href='./I%27m going in.ogg'>Aug 27 2023 2:27 PM</a></td>
+                    <td><a href='./Form up.ogg' class='name'>Form up.ogg</a></td>
+                    <td><a href='./Form up.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='11'><a href='./Form up.ogg'>11 KB</a></td>
+                    <td sorttable_customkey='1661980800'><a href='./Form up.ogg'>Aug 31 2023 12:00 AM</a></td>
                 </tr>
-            </tbody>
+                <tr class='file'>
+                    <td><a href='./Group up with me.ogg' class='name'>Group up with me.ogg</a></td>
+                    <td><a href='./Group up with me.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='12'><a href='./Group up with me.ogg'>12 KB</a></td>
+                    <td sorttable_customkey='1661980800'><a href='./Group up with me.ogg'>Aug 31 2023 12:00 AM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./On me.ogg' class='name'>On me.ogg</a></td>
+                    <td><a href='./On me.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='10'><a href='./On me.ogg'>10 KB</a></td>
+                    <td sorttable_customkey='1661980800'><a href='./On me.ogg'>Aug 31 2023 12:00 AM</a></td>
+                </tr>                
+                <tr class='file'>
+                    <td><a href='./Unite as one.ogg' class='name'>Unite as one.ogg</a></td>
+                    <td><a href='./Unite as one.ogg'>.OGG File</a></td>
+                    <td sorttable_customkey='5'><a href='./Unite as one.ogg'>12 KB</a></td>
+                    <td sorttable_customkey='1661980800'><a href='./Unite as one.ogg'>Aug 31 2023 12:00 AM</a></td>
+                </tr>
+            </tbody>        
         </table>
     </div>
     <button id="mode-toggle">
