--- a/cdn/Overwatch/v2.6.0.1/Hero's/Doomfist/Voicelines/Healing/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Doomfist/Voicelines/Healing/index.html
@@ -24,6 +24,12 @@
                 </tr>
             </thead>
             <tbody>
+                <tr class='directory'>
+                    <td><a href='../' class='name'>...</a></td>
+                    <td><a href='../'>&lt;GO BACK&gt;</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
+                </tr>
                 <tr class='file'>
                     <td><a href='./Healing.ogg' class='name'>Healing.ogg</a></td>
                     <td><a href='./Healing.ogg'>.OGG File</a></td>
