--- a/cdn/Overwatch/v2.6.0.1/Hero's/Doomfist/Voicelines/HealthRestoredFriendly/index.html
+++ b/cdn/Overwatch/v2.6.0.1/Hero's/Doomfist/Voicelines/HealthRestoredFriendly/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="container">
-        <h1>/Overwatch/v2.6.0.1/Hero's/Doomfist/Voicelines/Health/LowHealthBreathEnd/</h1>
+        <h1>/Voicelines/HealthRestoredFriendly/</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -31,23 +31,23 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./00000004138C.0B2.ogg' class='name'>00000004138C.0B2.ogg</a></td>
-                    <td><a href='./00000004138C.0B2.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='20'><a href='./00000004138C.0B2.ogg'>20 KB</a></td>
-                    <td sorttable_customkey='1661832840'><a href='./00000004138C.0B2.ogg'>Aug 28 2023 11:34 PM</a></td>
+                    <td><a href='./Just what I needed.ogg' class='name'>Just what I needed.ogg</a></td>
+                    <td><a href='./Just what I needed.ogg'>.OGG file</a></td>
+                    <td sorttable_customkey='22'><a href='./Just what I needed.ogg'>22</a></td>
+                    <td sorttable_customkey='1661832840'><a href='./Just what I needed.ogg'>Aug 28 2023 11:34 PM</a></td>
                 </tr>                
                 <tr class='file'>
-                    <td><a href='./00000004138D.0B2.ogg' class='name'>00000004138D.0B2.ogg</a></td>
-                    <td><a href='./00000004138D.0B2.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='23'><a href='./00000004138D.0B2.ogg'>23 KB</a></td>
-                    <td sorttable_customkey='1661832840'><a href='./00000004138D.0B2.ogg'>Aug 28 2023 11:34 PM</a></td>
-                </tr>                
+                    <td><a href='./Much better.ogg' class='name'>Much better.ogg</a></td>
+                    <td><a href='./Much better.ogg'>.OGG file</a></td>
+                    <td sorttable_customkey='13'><a href='./Much better.ogg'>13</a></td>
+                    <td sorttable_customkey='1661832840'><a href='./Much better.ogg'>Aug 28 2023 11:34 PM</a></td>
+                </tr>         
                 <tr class='file'>
-                    <td><a href='./00000004138E.0B2.ogg' class='name'>00000004138E.0B2.ogg</a></td>
-                    <td><a href='./00000004138E.0B2.ogg'>.OGG File</a></td>
-                    <td sorttable_customkey='14'><a href='./00000004138E.0B2.ogg'>14 KB</a></td>
-                    <td sorttable_customkey='1661832840'><a href='./00000004138E.0B2.ogg'>Aug 28 2023 11:34 PM</a></td>
-                </tr>                
+                    <td><a href='./That%27s better.ogg' class='name'>That's better.ogg</a></td>
+                    <td><a href='./That%27s better.ogg'>.OGG file</a></td>
+                    <td sorttable_customkey='20'><a href='./That%27s better.ogg'>20</a></td>
+                    <td sorttable_customkey='1661832840'><a href='./That%27s better.ogg'>Aug 28 2023 11:34 PM</a></td>
+                </tr>    
             </tbody>
         </table>
     </div>
