--- a/cdn/Overwatch/index.html
+++ b/cdn/Overwatch/index.html
@@ -12,7 +12,7 @@
     <script>
         // Function to fetch and display directory listing
         function displayDirectoryListing() {
-            fetch('directory.json') // Replace with the path to your JSON file
+            fetch('output.json') // Replace with the path to your JSON file
                 .then(response => response.json())
                 .then(data => {
                     const fileList = document.getElementById('fileList');
