--- a/cdn/Overwatch/index.html
+++ b/cdn/Overwatch/index.html
@@ -23,6 +23,7 @@
         <ion-icon name="moon-outline"></ion-icon>
     </button>
     <script src="script.js"></script>
+    <script src="/mode.js"></script>
 </body>
 
 </html>
