--- a/cdn/Overwatch/index.html
+++ b/cdn/Overwatch/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Directory Listing</h1>
     <div id="container">
-        <table class="">
-            <thead>sortable
+        <table class="sortable">
+            <thead>
                 <tr>
                     <th>Filename</th>
                     <th>Type</th>
