--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -398,6 +398,18 @@
                   <p class="project-category">Art designs</p>
                 </a>
               </li>
+              <li class="project-item active" data-filter-item data-category="web development">
+                <a href="https://overwatchaimbot.com">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                    <img src="https://cdn.lynnux.xyz/images/OverwatchAimbot.png" alt="OverwatchAimbot.com" loading="lazy"/>
+                  </figure>
+                  <h3 class="project-title">OverwatchAimbot.com</h3>
+                  <p class="project-category">Web development</p>
+                </a>
+              </li>
             </ul>
           </section>
         </article>
