--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -404,7 +404,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="https://cdn.lynnux.xyz/images/OverwatchAimbot.png" alt="OverwatchAimbot.com" loading="lazy"/>
+                    <img src="./assets/images/OverwatchAimbot.png" alt="OverwatchAimbot.com" loading="lazy"/>
                   </figure>
                   <h3 class="project-title">OverwatchAimbot.com</h3>
                   <p class="project-category">Web development</p>
