--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -228,12 +228,22 @@
             <ul class="clients-list has-scrollbar">
               <li class="clients-item">
                 <a href="https://twitch.tv/its_toko/">
-                  <img id="responsive-image" src="./assets/images/Toko.webp" alt="Its_Toko" height="150">
+                  <img id="responsive-image" src="./assets/images/Toko.webp" alt="Its_Toko Twitch" height="150">
                 </a>
               </li>
               <li class="clients-item">
                 <a href="https://www.twitch.tv/myceliaisoffline">
-                  <img id="MyceliaBanner" src="./assets/images/MyceliaBanner.webp" alt="MyceliaIsOffline" height="150">
+                  <img id="responsive-image" src="./assets/images/MyceliaBanner.webp" alt="MyceliaIsOffline Twitch" height="150">
+                </a>
+              </li>
+              <li class="clients-item">
+                <a href="https://discord.gg/jtky4tvV6F">
+                  <img id="responsive-image" src="./assets/images/MercyMains.webp" alt="Mercy-Mains Discord Server" height="150">
+                </a>
+              </li>
+              <li class="clients-item">
+                <a href="https://discord.gg/kiriko">
+                  <img id="responsive-image" src="./assets/images/KirikoMains.webp" alt="Kiriko-Mains Discord Server" height="150">
                 </a>
               </li>
             </ul>
