--- a/sites/lynnux/emotes/index.html
+++ b/sites/lynnux/emotes/index.html
@@ -100,7 +100,7 @@
                     <img src="./assets/images/MyceliaIsOffline.png" alt="na" loading="lazy"/>
                   </figure>
                   <h3 class="project-title">lifeguar Mercy Chibi</h3>
-                  <p class="project-category">MyceliaIsOffline</p>
+                  <p class="project-category">Mercy Mains Discord Server</p>
                 </a>
               </li>
               <li class="project-item active" data-filter-item data-category="art designs">
@@ -109,22 +109,22 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/SombraPreview.png" alt="na" loading="lazy"/>
+                    <img src="./assets/images/SombraPreview.png" alt="Sombra" loading="lazy"/>
                   </figure>
                   <h3 class="project-title">Peppermint Sombra Chibi</h3>
                   <p class="project-category">Not used yet.</p>
                 </a>
               </li>
               <li class="project-item active" data-filter-item data-category="art designs">
-                <a href="./">
+                <a href="https://cdn.lynnux.xyz/downloads/emotes/Kiriko/">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/Main.png" alt="na" loading="lazy"/>
+                    <img src="./assets/images/Kiriko.png" alt="Kiriko" loading="lazy"/>
                   </figure>
-                  <h3 class="project-title">n/a</h3>
-                  <p class="project-category">n/a</p>
+                  <h3 class="project-title">Kiriko Chibi</h3>
+                  <p class="project-category">Kiriko Mains Discord Server</p>
                 </a>
               </li>
               <li class="project-item active" data-filter-item data-category="art designs">
