--- a/sites/lynnux/emotes/index.html
+++ b/sites/lynnux/emotes/index.html
@@ -85,7 +85,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/Its_Toko.png" alt="Toko" loading="lazy"/>
+                    <img src="./assets/images/Doomfist.png" alt="Toko" loading="lazy"/>
                   </figure>
                   <h3 class="project-title">Pink Doomfist Chibi</h3>
                   <p class="project-category">Its_Toko</p>
@@ -97,7 +97,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/MyceliaIsOffline.png" alt="na" loading="lazy"/>
+                    <img src="./assets/images/Mercy.png" alt="na" loading="lazy"/>
                   </figure>
                   <h3 class="project-title">lifeguar Mercy Chibi</h3>
                   <p class="project-category">Mercy Mains Discord Server</p>
@@ -109,7 +109,7 @@
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <img src="./assets/images/SombraPreview.png" alt="Sombra" loading="lazy"/>
+                    <img src="./assets/images/Sombra.png" alt="Sombra" loading="lazy"/>
                   </figure>
                   <h3 class="project-title">Peppermint Sombra Chibi</h3>
                   <p class="project-category">Not used yet.</p>
