--- a/sites/lynnux/emotes/mercy/112x112/index.html
+++ b/sites/lynnux/emotes/mercy/112x112/index.html
@@ -15,6 +15,17 @@
     <meta property="og:url" content="http://cdn.lynnux.xyz/overwatch/" />
     <meta name="theme-color" content="#91484F">
     <meta name="twitter:card" content="summary_large_image">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YSD2Q72W1H"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-YSD2Q72W1H');
+    </script>
+
 </head>
 <body>
     <h1 id="fileLocation">/ParentDirectory/CurrentDirectory/</h1>
